# fast_ascon

./: Cargo.toml  LICENSE  README.md  pyproject.toml
src/: lib.rs
