[package]
name = "fast_ascon"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fast_ascon"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.23.3"
ascon-aead = "0.4.2"
ascon-hash = "0.2.0"
